[package]
name = "moq-catalog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
language-tags = "=0.3.2"
log = "0.4.22"
mime = "0.3.17"
mixin = "0.2.0"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
thiserror = "1.0.63"
